[gd_scene load_steps=5 format=3 uid="uid://brfowgym3vbqf"]

[ext_resource type="PackedScene" uid="uid://csvihhksppbla" path="res://player.tscn" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://cn842bw5pipym" path="res://world.gd" id="1_fj7yv"]
[ext_resource type="PackedScene" uid="uid://c4urcq2sje3vp" path="res://wave_enemy.tscn" id="2_tlwt5"]
[ext_resource type="Texture2D" uid="uid://c58lcsd17jp5q" path="res://assets/images/background.png" id="3_aqk2v"]

[node name="world" type="Node2D"]
script = ExtResource("1_fj7yv")
enemy_scene = ExtResource("2_tlwt5")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-2, -4)
scale = Vector2(0.55, 0.55)
texture = ExtResource("3_aqk2v")

[node name="Player" parent="." instance=ExtResource("1_f3sb7")]

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="ScoreLabel" type="Label" parent="."]
offset_left = -308.0
offset_top = -315.0
offset_right = -108.0
offset_bottom = -282.0
text = "0"
